# MongoSAMP

./: .gitignore  CMakeLists.txt  README.md  example.pwn  mongo.inc
src/: MongoSystem.cpp  MongoSystem.h  Natives.cpp  Natives.h  main.cpp
